# jpo_projekt_zaliczeniowy

./: CMakeLists.txt  README.md  README.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt
